python/testData/inspections/AddImportDocComment.py
# Comments here
"Doc comment stays intact"
<caret><error descr="Unresolved reference 'ImportTarget'">ImportTarget</error>.foo

foo = 1
